cicd/idm/base/idm.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    app: openidm
    component: openidm
    vendor: forgerock
  name: openidm-openidm
spec:
  replicas: 1
  serviceName: idm
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "false"
      labels:
        app: openidm
        component: openidm
        release: openidm
        vendor: forgerock
    spec:
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: gcr.io/engineering-devops/sk-idm:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            httpHeaders:
            - name: X-OpenIDM-Username
              value: anonymous
            - name: X-OpenIDM-Password
              value: anonymous
            - name: X-OpenIDM-NoSession
              value: "true"
            path: /openidm/info/ping
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 5
        name: openidm
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 1000m
            memory: 1200Mi
          requests:
            cpu: 300m
            memory: 1024Mi
        volumeMounts:
        - mountPath: /opt/openidm/secrets
          name: openidm-secrets
        - mountPath: /opt/openidm/logs
          name: logs
        - mountPath: /opt/openidm/audit
          name: audit-logs
        - mountPath: /var/run/openidm/commons
          name: boot-properties
        - mountPath: /var/run/openidm/logging
          name: logging-properties
      volumes:
      - name: openidm-secrets
        secret:
          secretName: openidm-secrets
      - emptyDir: {}
        name: logs
      - emptyDir: {}
        name: audit-logs
      - configMap:
          name: idm-boot-properties
        name: boot-properties
      - configMap:
          name: idm-logging-properties
        name: logging-properties
  updateStrategy:
    type: RollingUpdate
